--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>BotUI - Delivery Bot</title>
+    <title>Chatbot Allius</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="https://unpkg.com/botui/build/botui.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/botui/build/botui-theme-default.css" />
-    <meta name="description"
-        content="A bot that confirms a delivery address for shipping. A conversational UI built using BotUI.">
 </head>
 
 <body>
